# DszL

./: .gitignore  Cargo.toml  readme.md  rustfmt.toml
config/: log4rs.yaml
doc/: bnf.sublime-syntax  dszl.sublime-syntax
doc/img/: .$diag.png.bkp  .$diag.png.dtmp
examples/: test1.dszl  test2.dszl  test3.dszl  test4.dszl  test5.dszl
src/: api.rs  lang.rs  main.rs  ui.rs
src/api/: cli.rs  interact.rs
src/lang/: environment.rs  expr.rs  lexer.rs  parser.rs  result.rs  statement.rs  token.rs  variable.rs  visitor.rs
src/ui/: gui.rs  tui.rs
