[package]
name = "dszl"
version = "1.1.4"
edition = "2021"
authors = ["fa_555 <fa_555@foxmail.com>"]
repository = "https://github.com/ArtveFlinaInBupt/DszL"

[dependencies]
thiserror = { version = "1.0.51", features = [] }
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
eframe = "0.24.1"
egui = { version = "0.24.1", default-features = false, features = ["default_fonts"] }
lazy_static = "1.4.0"
log = { version = "0.4.20", features = [] }
log4rs = { version = "1.2.0", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
libc = "0.2.151"
regex = "1.10.2"
