[package]
name = "dszl"
version = "1.2.0"
edition = "2021"
authors = ["fa_555 <fa_555@foxmail.com>"]
repository = "https://github.com/ArtveFlinaInBupt/DszL"

[dependencies]
thiserror = { version = "1.0.57", features = [] }
clap = { version = "4.5.1", features = ["derive"] }
colored = "2.1.0"
eframe = "0.26.2"
egui = { version = "0.26.2", default-features = false, features = ["default_fonts"] }
lazy_static = "1.4.0"
log = { version = "0.4.20", features = [] }
log4rs = { version = "1.3.0", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
libc = "0.2.153"
regex = "1.10.3"
